service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohello-service
spec:
  type: NodePort
  selector:
    app: go-hello
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
