ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gohello-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: gohello-service
          servicePort: 8080
